<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/tv_margin_large"
    android:background="@color/background_dark">
    
    <!-- Success Icon -->
    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/tv_margin_medium"
        android:contentDescription="@string/success_title"
        android:src="@android:drawable/checkbox_on_background"
        app:tint="@color/success_green"
        android:alpha="0"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toTopOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_title"
        android:textAppearance="@style/TextAppearance.HdHomey.Title"
        android:textColor="@color/success_green"
        android:alpha="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:text="@string/success_message"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/text_secondary"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_server_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_large"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/text_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_large"
        android:text="@string/back_to_servers"
        android:minWidth="200dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/text_server_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_view_channels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:text="@string/view_channels"
        android:minWidth="200dp"
        android:alpha="0"
        android:focusable="true"
        android:backgroundTint="@color/hd_homey_blue"
        app:layout_constraintTop_toBottomOf="@id/button_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
