<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/tv_margin_large"
    android:background="@color/background_dark">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        android:textAppearance="@style/TextAppearance.HdHomey.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:text="@string/enter_code"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_device_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_small"
        android:text="LOADING"
        android:textAppearance="@style/TextAppearance.HdHomey.Code"
        app:layout_constraintTop_toBottomOf="@id/text_code_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_pairing_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:text="@string/loading"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text_device_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:text=""
        android:textSize="@dimen/text_size_caption"
        android:textColor="@color/text_tertiary"
        app:layout_constraintTop_toBottomOf="@id/text_pairing_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Status indicator for loading/polling states -->
    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:text=""
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_countdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_medium"
        android:visibility="gone"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/error_red"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/loading_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Action buttons (shown on error or during auth) -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_large"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tv_margin_small"
            android:text="@string/add_server_cancel_button"
            android:minWidth="120dp"
            style="@style/Widget.Material3.Button.OutlinedButton" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:minWidth="120dp"
            style="@style/Widget.Material3.Button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
